# CLIppet

./: .gitignore  README.md  clippet-config.json  clippet-spec.md  pyproject.toml
clippet/: __init__.py  cli.py  isolation.py  models.py  orchestrator.py  protocols.py
clippet/adapters/: __init__.py  api.py  base.py  claude.py  codex.py  gemini.py  personas.py  qoder.py  qodercli.py
clippet/config/: __init__.py  detector.py  environments.py  project.py  registry.py
clippet/parsers/: __init__.py  extractors.py
docs/: isolated-agent-environment.md
samples/project-level/: .clippet.json.example
tests/: __init__.py  test_adapters.py  test_api_adapter.py  test_cli.py  test_config.py  test_detector.py  test_environments.py  test_isolation.py  test_models.py  test_orchestrator.py  test_packaging.py  test_project_config.py  test_second_home.py
