[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clippet"
version = "0.1.0"
description = "A unified adapter framework for orchestrating CLI AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
